# Remind

./: CMakeLists.txt
man/: remind.1
src/: dorem.c  files.c  protos.h  queue.c  sort.c
